# pi-mermaid

./: .gitignore  Changelog.md  NOTICE  README.md  index.ts  package-lock.json  package.json  pi-mermaid.wasm.br  tsconfig.json
rust/: Cargo.toml
rust/ratatui-shim/: Cargo.toml
rust/ratatui-shim/src/: lib.rs
rust/src/: lib.rs
tests/: unit.test.mjs
